chore: add fastify

--- a/package.json
+++ b/package.json
@@ -14,5 +14,8 @@
     "@types/node": "^20.11.17",
     "tsx": "^4.7.1",
     "typescript": "^5.3.3"
+  },
+  "dependencies": {
+    "fastify": "^4.26.1"
   }
 }
