--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@rocketseat/eslint-config": "^2.2.2",
     "@types/node": "^20.11.17",
     "eslint": "^8.56.0",
+    "prisma": "^5.9.1",
     "tsx": "^4.7.1",
     "typescript": "^5.3.3"
   },
